[package]
name = "logicrs"
version = "0.5.0"
license = "MIT"
description = "Rust library for logic expression"
edition = "2024"
repository = "https://github.com/gipsyh/logic-form"
authors = ["Yuheng Su <gipsyh.icu@gmail.com>"]
keywords = ["logic"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
giputils = { path = "../giputils", version = "0.3.3" }
ahash = "0.8.11"
rand = "0.9.1"
log = "0.4.27"
