[package]
name = "logicrs"
version = "0.5.2"
license = "MIT"
description = "Rust library for logic expression"
edition = "2024"
repository = "https://github.com/gipsyh/logicrs"
authors = ["Yuheng Su <gipsyh.icu@gmail.com>"]
keywords = ["logic"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
giputils = { path = "../giputils", version = "0.3.4" }
ahash = "0.8.11"
rand = "0.9.1"
log = "0.4.27"
lazy_static = "1.5.0"
inventory = "0.3.20"
